--- a/other/default.config
+++ b/other/default.config
@@ -14,7 +14,8 @@
   },
   "rsnapshot": {
     "script": "",
-    "command": ""
+    "command": "",
+    "root_folder" : ""
   },
   "log": {
     "filename": "",
